# beepgenerator

./: README.md  pyproject.toml  real_time.py
beepgenerator/: beep_boop.py  better_beep.py
tests/: test_beepgenerator.py
